--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "blogging-frontend",
   "version": "0.1.0",
@@ -11,6 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "deploy": "yarn build && netlify deploy --prod --dir=build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,4 +33,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
