--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "blogging-frontend",
   "version": "0.1.0",
@@ -9,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -33,5 +33,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
